# Ayria_rewrite

./: .gitignore  CMakeLists.txt  Configuration.hpp  Readme.md  Stdinclude.hpp  Thirdparty.hpp  vcpkg.json
Ayria/: Appmain.cpp  Ayria.hpp  CMakeLists.txt
Ayria/Backend/: Backend.hpp  Backgroundtasks.cpp  Configuration.cpp  Database.cpp  LANNetworking.cpp  Pluginloader.cpp  Synchronization.cpp  Taskrunner.hpp  Tasks.cpp  Waitonaddress.cpp
Ayria/Communication/: Communication.hpp  Console.cpp  JSONAPI.cpp  Notifications.cpp
Ayria/Frontend/: AABitmap.hpp  AAColor.hpp  Frontend.hpp  Rendering.hpp  Windowsconsole.cpp
Ayria/Frontend/GDI/: AABitmap.cpp  AAFont.cpp  Renderer.cpp
Docs/Research/: AMD.md
Utilities/: CMakeLists.txt  Constexprhelpers.hpp  Datatypes.hpp  Unittests.cpp  Utilities.hpp
Utilities/AyriaAPI/: ClientDB.hpp
Utilities/Containers/: Bytebuffer.hpp  Ringbuffer.hpp
Utilities/Crypto/: Checksums.hpp  HWID.hpp  OpenSSLWrapper.hpp  SHA.hpp  Tiger192.hpp  qDSA.hpp
Utilities/Encoding/: Base58.hpp  Base64.hpp  Base85.hpp  JSON.hpp  QOI.hpp  UTF8.hpp
Utilities/Hacking/: Disassembly.hpp  Hooking.hpp  Memory.hpp  Patternscan.hpp  Pseudointrinsic.cpp
Utilities/Strings/: Stringsplit.hpp  Variadicstring.hpp  toHexstring.hpp
Utilities/Threading/: Debugmutex.hpp  Spinlock.hpp
Utilities/Wrappers/: Databasewrapper.hpp  Filesystem.hpp  Logging.cpp  Logging.hpp  sqlite3.h
